Fix z-index for menu

--- a/static/stylesheets/common.css
+++ b/static/stylesheets/common.css
@@ -177,6 +177,7 @@ p {
 }
 
 #menu {
+    z-index: 11;
     display: none;
     position: fixed;
     background-color: #1F2020;
